// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-public-access should get public access for a valid document 1`] = `
{
  "content": [
    {
      "text": "{"members":[],"groups":[{"name":"_Test PublicAccess MemberGroup","id":"00000000-0000-0000-0000-000000000000"}],"loginDocument":{"id":"00000000-0000-0000-0000-000000000000"},"errorDocument":{"id":"00000000-0000-0000-0000-000000000000"}}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-public-access should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
